src/test/ui/reachable/expr_assign.stderr
error: unreachable expression
  --> $DIR/expr_assign.rs:9:5
   |
LL |     x = return;
   |     ^^^^------
   |     |   |
   |     |   any code following this expression is unreachable
   |     unreachable expression
   |
note: lint level defined here
  --> $DIR/expr_assign.rs:4:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: unreachable expression
  --> $DIR/expr_assign.rs:19:14
   |
LL |         *p = return;
   |         --   ^^^^^^ unreachable expression
   |         |
   |         any code following this expression is unreachable

error: unreachable expression
  --> $DIR/expr_assign.rs:25:15
   |
LL |     *{return; &mut i} = 22;
   |       ------  ^^^^^^ unreachable expression
   |       |
   |       any code following this expression is unreachable

error: aborting due to 3 previous errors

